tests/parsing/smtlib/v2.6/errors/106_push_bad_num_1.expected
File "tests/parsing/smtlib/v2.6/errors/106_push_bad_num_1.smt2", line 1, character 6-7:
1 | (push _)
          ^
Error while parsing a push command, read the reserved word '_',
      but expected a numeral.
